# ChemicalDice

./: Chemdice_descriptor_calculation_tutorial.ipynb  MANIFEST.in  Readme.md  Readme.rst  environment.yml  old.rst  pyproject.toml
ChemicalDice/: Grover.py  ImageMol.py  analyse_data.py  architecture.py  bioactivity.py  chemical.py  fingerprint.py  fusionData.py  getEmbeddings.py  myImports.py  myTrainParams.py  plot_data.py  pretrain.py  quantum.py
docs/: Chemdice.rst  ChemicalDice.rst  conf.py  modules.rst
docs/pages/: GettingStarted.rst  Installation.rst
docs/pages/methods/: Normalization Methods 1fe6dde97fe740bf94c36752e02d10b7.mdZone.Identifier
