[build-system]
requires = [
	"setuptools>=54",
	"wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "ChemicalDice"
version = "0.3.2"
readme = "Readme.rst"
description = "ChemicalDice: Transforming cheminformatics and bioinformatics with advanced data fusion analysis."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]
optional-dependencies = { docs = [
    "sphinx",
    "sphinx-gallery",
    "sphinx-rtd-theme",	
    "seaborn",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
	"tensorly",
    "torch",
    "tqdm"
] }
